crates/rd2qmd-cli/tests/snapshots/integration__arguments_rich_typ.snap
---
source: crates/rd2qmd-cli/tests/integration.rs
expression: output
---
#set document(title: "Rich Argument Content")
#metadata((
  pagetitle: "Rich Argument Content — arguments_rich",
  aliases: ("arguments_rich",),
))<rd2qmd>

= Rich Argument Content

== Description

This function has arguments with rich, nested Markdown-relevant content\.

== Usage

```r
#| eval: false
arguments_rich(x, method, describe_arg, table_arg, pre_only, pre_with_intro,
  backtick_code, fence_collision, cr_break, multi_paragraph,
  itemize_multi_paragraph, ...)
```

== Arguments

#table(
  columns: 2,
  table.header([Argument], [Description]),
  [`x`], [A basic argument for comparison\.],
  [`method`], [
    The method to use, described as a nested list:

    - `"a"`: Use method A, the default\.
    - `"b"`: Use method B instead\.
  ],
  [`describe_arg`], [
    The method to use, described with a definition list:

    #terms(
      terms.item(["a"], [Use method A\.]),
      terms.item(["b"], [Use method B\.]),
    )
  ],
  [`table_arg`], [
    The argument\. See the table:

    #table(
      columns: 2,
      align: (left, left,),
      [Col1], [Col2],
      [a], [1],
      [b], [2],
    )
  ],
  [`pre_only`], [
    ```
    result <- foo(x)
    print(result)
    ```
  ],
  [`pre_with_intro`], [
    Example usage:

    ```
    result <- foo(x)
    print(result)
    ```
  ],
  [`backtick_code`], [Use #raw("`a`") or #raw("``nested``") for non-syntactic names\.],
  [`fence_collision`], [
    Code containing a fence-like line:

    #raw(block: true, "```r\nx <- 1\n```")
  ],
  [`cr_break`], [
    First line\. \
     \- hyphen\. \
     \* asterisk\. \
     \+ plus\. \
     1\. ordered period\.
  ],
  [#raw("`a`")], [A non-syntactic argument name with single backticks\.],
  [#raw("``b``")], [A label with a double-backtick run\.],
  [`multi_paragraph`], [
    First paragraph\.

    Second paragraph of the description\.
  ],
  [`itemize_multi_paragraph`], [
    Options:

    - First paragraph\.

      Second paragraph of this item\.
    - Another item\.
  ],
)

== Value

Nothing of interest\.

== Examples

```r
arguments_rich(1, "a", "a", NULL, NULL, NULL, NULL, NULL, NULL, "x", "y")
```
