crates/rd2qmd-cli/tests/snapshots/integration__example_control_qmd.snap
---
source: crates/rd2qmd-cli/tests/integration.rs
expression: output
---
---
title: "Example control macros test"
pagetitle: "Example control macros test — example_control"
aliases:
  - "example_control"
---

## Description

 Test file for `\dontrun`, `\donttest`, and `\dontshow` macros. 

## Examples

```{r}
# Regular code - always shown, always run
x <- 1
```

```r
# dontrun code - shown but not run
x <- 2
```

```{r}
# donttest code - shown, run by example() but not R CMD check
x <- 3
```

```{r}
#| include: false
# dontshow code - not shown, but always run
x <- 4
```

```{r}
#| include: false
# testonly code - alias for dontshow
x <- 5
```

```{r}
# After all control macros
print(x)
```
